<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0e0e0e"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_stan_centrali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:text="@string/Stan_centrali"
        android:textColor="#fbfbfb" />

    <TextView
        android:id="@+id/textView_Informacje_SIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Informacje_SIM"
        android:layout_below="@+id/toggleButton_stan_centrali"
        android:textSize="20sp"
        android:layout_marginTop="57dp"
        android:text="@string/stan_konta"
        android:textColor="#fbfbfb" />

    <Button
        android:id="@+id/Informacje_SIM"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_stan_centrali"
        android:layout_below="@+id/textView_Informacje_SIM"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:text="@string/sim"
        android:textColor="#fbfbfb" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_stan_centrali"
        android:layout_below="@+id/Informacje_SIM"
        android:text="Button"
        android:textColor="#fbfbfb" />

    <Button
        android:id="@+id/ustawienia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_stan_centrali"
        android:layout_below="@+id/button3"
        android:onClick="Ustawienia"
        android:text="@string/ustawienia"
        android:textColor="#fbfbfb" />

    <ToggleButton
        android:id="@+id/toggleButton_stan_centrali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_stan_centrali"
        android:layout_alignBottom="@+id/textView_stan_centrali"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/ustawienia"
        android:text="ToggleButton"
        android:textColor="#fbfbfb"
        android:textOff="@string/Button_Off"
        android:textOn="@string/Botton_On" />

</RelativeLayout>
</ScrollView>