<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<RelativeLayout 
   	 	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="#0e0e0e"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	tools:context=".Ustawienia" >

    	<TextView
        	android:id="@+id/textView_Wprowadz"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
        	android:layout_marginTop="69dp"
        	android:text="@string/Wprowadz"
        	android:textColor="#fbfbfb"
        	android:textSize="20sp" />

    	<EditText
        	android:id="@+id/editText1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/textView_Wprowadz"
        	android:layout_below="@+id/textView_Wprowadz"
        	android:layout_marginTop="58dp"
        	android:ems="10"
        	android:inputType="phone"
        	android:textColor="#fbfbfb" />

   		 <TextView
        	android:id="@+id/textView_UwagaSim"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/textView_Wprowadz"
        	android:layout_below="@+id/textView_Wprowadz"
        	android:text="@string/Uwaga_SIM"
        	android:textColor="#fbfbfb" />

    	<TextView
        	android:id="@+id/textView_Nr_telefonu"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/editText1"
        	android:layout_alignRight="@+id/editText1"
        	android:layout_below="@+id/editText1"
        	android:layout_marginTop="16dp" />
	
    	<Button
        	android:id="@+id/button_Ok"
       	 	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignRight="@+id/textView_UwagaSim"
        	android:layout_below="@+id/textView_Nr_telefonu"
        	android:layout_marginRight="56dp"
        	android:layout_marginTop="21dp"
        	android:onClick="TelefonOk"
        	android:text="@string/Ok"
        	android:textColor="#fbfbfb" />

	</RelativeLayout>
</ScrollView>